--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -7,10 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".InicioSesion">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+
 
         <ImageView
             android:id="@+id/imgLogo"
@@ -19,8 +23,12 @@
             android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop"
             android:src="@drawable/servicio" />
-
-        <LinearLayout
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbarStyle="outsideInset"
+            android:scrollbars="horizontal">
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -99,7 +107,12 @@
 
             </LinearLayout>
         </LinearLayout>
+
+        </ScrollView>
+
     </LinearLayout>
+
+
     <ProgressBar
         android:id="@+id/ProgressBar"
         android:layout_width="wrap_content"
